--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<p>Himachal Pradesh is the northernmost state of India and shares borders with the union territories of Jammu and Kashmir and Ladakh to the north, and the states of Punjab to the west, Haryana to the southwest, Uttarakhand to the southeast and a very narrow border with Uttar Pradesh to the south</p>
 	<h3>Top 5 attractions:</h3>
 	<ol>
-		<li><strong>Solang Valley:</strong>Known for its stunning landscapes and adventure sports like paragliding and skiing.</li>
+		<li><b>Solang Valley:</b>Known for its stunning landscapes and adventure sports like paragliding and skiing.</li>
 		<li><strong>Triund Hilly:</strong>A popular trekking destination offering panoramic views of the Dhauladhar range.</li>
 		<li><strong>Manali:</strong>A picturesque hill station famous for its scenic beauty and adventure activities.</li>
 		<li><strong>Shimla:</strong>The capital city, known for its <i>colonial architecture</i> and pleasant climate.</li>
@@ -20,7 +20,7 @@
 	</ol>
 	<h3>Must-try foods:</h3>
 	<ul>
-		<li><strong>Dhaam:</strong> A traditional festive meal consisting of rice, dal, rajma, curd, and boor ki kadhi</li>
+		<li><strong>Dhaam:</strong> A <em>traditional festive meal</em> consisting of rice, dal, rajma, curd, and boor ki kadhi</li>
 		<li><strong>Madra:</strong> A creamy chickpea curry cooked with spices like cardamom, cinnamon, and cloves</li>
 		<li><strong>Dhaam:</strong> A traditional festive of rice, dal, rajma, curd, and boor ki kadhi</li>
 		<li><strong>Madra:</strong> A <i>creamy chickpea curry</i> cooked with spices like cardamom, cinnamon, and cloves</li>
